tests/relay_integration_module_prefix/relay_integration_module_prefix.exp
Error ----------------------------------------------------------------------------------------------------- test.js:11:2

Cannot cast `fragment` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:11:2
   11| (fragment: string); // ERROR
        ^^^^^^^^

References:
   __generated__/MyFragment.graphql.js:1:18
    1| module.exports = 1;
                        ^ [1]
   test.js:11:12
   11| (fragment: string); // ERROR
                  ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:2

Cannot cast `query` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:21:2
   21| (query: string); // ERROR
        ^^^^^

References:
   __generated__/MyQuery.graphql.js:1:18
    1| module.exports = 2;
                        ^ [1]
   test.js:21:9
   21| (query: string); // ERROR
               ^^^^^^ [2]



Found 2 errors
